package com.newen.workflowEngine.domain.model.execution;

import java.util.UUID;

public record WorkflowExecutionId(UUID value) {}