package com.newen.workflowEngine.domain.model.workflow;

import java.util.UUID;

public record WorkflowId(UUID value) {}